# cookiecutter_zephyr

./: .pre-commit-config.yaml  README.md  cookiecutter.json
.github/workflows/: ci.yml
adc/: cookiecutter.json
adc/hooks/: post_gen_project.py
adc/{{cookiecutter.project_slug}}/: README.md
adc/{{cookiecutter.project_slug}}/drivers/: CMakeLists.txt  Kconfig
adc/{{cookiecutter.project_slug}}/samples/: sample.yaml  sixtron_bus.overlay
core/: cookiecutter.json
core/hooks/: post_gen_project.py
core/{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md
core/{{cookiecutter.project_slug}}/zephyr/: module.yml
hooks/: pre_prompt.py
resources/manifests/: default.yml
sensor/: cookiecutter.json
sensor/hooks/: post_gen_project.py
sensor/{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CMakeLists.txt  Kconfig  README.md
sensor/{{cookiecutter.repo_name}}/: README.md
shield/: cookiecutter.json
shield/hooks/: post_gen_project.py
shield/{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md
workspace_application/: cookiecutter.json
workspace_application/hooks/: post_gen_project.py  pre_prompt.py
workspace_application/{{cookiecutter.project_slug}}/: README.md  west.yml
workspace_application/{{cookiecutter.project_slug}}/app/: CMakeLists.txt  app.overlay  prj.conf
workspace_application/{{cookiecutter.project_slug}}/app/include/: stse_conf.h
workspace_application/{{cookiecutter.project_slug}}/app/src/: main.c
{{cookiecutter.short_manufacturer.lower()}}-{{cookiecutter.reference}}/: CMakeLists.txt  README.md
(+67 files in other folders)
